# papercraft

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: manual_cs.md  specifikace.md
samples/: README.md  house_with_dome.apcraft
src/archpapercraft/: __init__.py  __main__.py  app.py
src/archpapercraft/arch_presets/: __init__.py  buttress.py  floor_slab.py  gothic_window.py  onion_dome.py  opening.py  roof.py  tower.py  wall.py
src/archpapercraft/commands/: __init__.py  command_stack.py
src/archpapercraft/core_geometry/: __init__.py  backend.py  mesh.py  operations.py  primitives.py  stable_ids.py  units.py  validation.py
src/archpapercraft/exporter/: __init__.py  dxf_export.py  pdf_export.py  png_export.py  svg_export.py
src/archpapercraft/layout_packer/: __init__.py  packer.py
src/archpapercraft/paper_analyzer/: __init__.py  classifier.py
src/archpapercraft/preferences/: __init__.py  settings.py
src/archpapercraft/project_io/: __init__.py  project.py
src/archpapercraft/scene_graph/: __init__.py  node.py  scene.py  snap.py  transform.py
src/archpapercraft/seam_editor/: __init__.py  auto_seams.py  seam_graph.py
src/archpapercraft/tabs_generator/: __init__.py  build_guide.py  markings.py  tabs.py
tests/: conftest.py  test_backend.py  test_classifier_enhanced.py  test_commands.py  test_core_geometry.py  test_exporter.py  test_mvp_pipeline.py  test_new_primitives.py  test_node_enhanced.py  test_preferences.py  test_project_enhanced.py  test_project_io.py  test_seam_enhanced.py  test_seam_graph.py  test_snap.py  test_stable_ids.py  test_tabs.py  test_tabs_enhanced.py  test_unfolder.py  test_units.py
(+12 files in other folders)
